# tap-qbwc

./: AGENTS.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: smoke-test.yml
tap_qbwc/: __init__.py  __main__.py  base_stream.py  client.py  streams.py  tap.py
tap_qbwc/qbd_xml_schemas/: qbxml130.xsd  qbxmlops130.xsd  qbxmlso130.xsd  qbxmltypes130.xsd
tests/: __init__.py  test_core.py
