[tool.poetry]
name = "tap-qbwc"
version = "0.0.1"
description = "`tap-qbwc` is a Singer tap for qbwc, built with the Meltano SDK for Singer Taps."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "qbwc",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.34.2"
xmlschema = "^4.3.2"
hotglue-singer-sdk = "^1.0.40"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-qbwc = "tap_qbwc.tap:TapQBWC.cli"

[tool.tox]
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "lint",
    "typing",
    "3.10",
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-runner"
pass_env = [
    "TAP_QBWC_*",
]
deps = ["pytest>=9"]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.lint]
description = "run ruff linter and formatter check"
skip_install = true
deps = ["ruff>=0.15"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
]

[tool.tox.env.typing]
description = "type checks"
runner = "uv-venv-runner"
deps = [
    "mypy>=1.19.1",
    "ty>=0.0.18",
]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_qbwc", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_qbwc", "tests" ], extend = true } ],
]
